fix catalog not scrolling properly on mobile

--- a/frontend/src/app/Catalog/CatalogView/CatalogView.module.scss
+++ b/frontend/src/app/Catalog/CatalogView/CatalogView.module.scss
@@ -1,4 +1,4 @@
-.catalogViewRoot {
+.root {
 	display: flex;
 	position: relative;
 	grid-area: view;
